// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KonnectorModal adding an account should render the form when controlled by state 1`] = `
<ModalContent>
  <div
    className="u-pt-1-half"
  >
    <LegacyTriggerManager
      konnector={
        Object {
          "name": "Mock",
          "slug": "mock",
          "triggers": Object {
            "data": Array [
              Object {
                "_id": 784,
                "doctype": "io.cozy.triggers",
              },
            ],
          },
        }
      }
      onLoginSuccess={[Function]}
      onSuccess={[Function]}
    />
  </div>
</ModalContent>
`;

exports[`KonnectorModal should render the selected account via a prop 1`] = `
<ModalContent>
  <withClient(Wrapper)
    account={
      Object {
        "_id": "123",
        "doctype": "io.cozy.accounts",
      }
    }
    addAccount={[Function]}
    konnector={
      Object {
        "name": "Mock",
        "slug": "mock",
        "triggers": Object {
          "data": Array [
            Object {
              "_id": "784",
              "doctype": "io.cozy.triggers",
            },
            Object {
              "_id": "872",
              "doctype": "io.cozy.triggers",
            },
          ],
        },
      }
    }
    onAccountDeleted={[MockFunction]}
    refetchTrigger={[Function]}
    trigger={
      Object {
        "_id": "784",
        "doctype": "io.cozy.triggers",
      }
    }
  />
</ModalContent>
`;

exports[`KonnectorModal should show a spinner while loading 1`] = `
<Spinner
  className="u-flex u-flex-justify-center u-pv-3"
  color="var(--primaryColor)"
  loadingType=""
  middle={false}
  noMargin={false}
  size="xxlarge"
/>
`;

exports[`KonnectorModal should show an error view 1`] = `
<ModalContent>
  <Infos
    actionButton={
      <DefaultButton
        theme="danger"
      >
        modal.konnector.error.button
      </DefaultButton>
    }
    icon={null}
    isImportant={true}
    text="modal.konnector.error.description"
    title="modal.konnector.error.title"
  />
</ModalContent>
`;

exports[`KonnectorModal should show the configuration view of a single account 1`] = `
<ModalContent>
  <withClient(Wrapper)
    account={
      Object {
        "_id": "123",
        "doctype": "io.cozy.accounts",
      }
    }
    addAccount={[Function]}
    konnector={
      Object {
        "name": "Mock",
        "slug": "mock",
        "triggers": Object {
          "data": Array [
            Object {
              "_id": 784,
              "doctype": "io.cozy.triggers",
            },
          ],
        },
      }
    }
    onAccountDeleted={[MockFunction]}
    refetchTrigger={[Function]}
    trigger={
      Object {
        "_id": 784,
        "doctype": "io.cozy.triggers",
      }
    }
  />
</ModalContent>
`;

exports[`KonnectorModal should show the list of accounts 1`] = `
<ModalContent>
  <React.Fragment>
    <Wrapper
      accounts={
        Array [
          Object {
            "account": Object {
              "_id": "123",
              "doctype": "io.cozy.accounts",
            },
            "trigger": Object {
              "_id": "784",
              "doctype": "io.cozy.triggers",
            },
          },
          Object {
            "account": Object {
              "_id": "123",
              "doctype": "io.cozy.accounts",
            },
            "trigger": Object {
              "_id": "872",
              "doctype": "io.cozy.triggers",
            },
          },
        ]
      }
      addAccount={[Function]}
      konnector={
        Object {
          "name": "Mock",
          "slug": "mock",
          "triggers": Object {
            "data": Array [
              Object {
                "_id": "784",
                "doctype": "io.cozy.triggers",
              },
              Object {
                "_id": "872",
                "doctype": "io.cozy.triggers",
              },
            ],
          },
        }
      }
      onPick={[Function]}
    />
  </React.Fragment>
</ModalContent>
`;

exports[`KonnectorModal switching account should show the add account view when controlled by state 1`] = `
<ModalContent>
  <withClient(Wrapper)
    account={
      Object {
        "_id": "123",
        "doctype": "io.cozy.accounts",
      }
    }
    addAccount={[Function]}
    konnector={
      Object {
        "name": "Mock",
        "slug": "mock",
        "triggers": Object {
          "data": Array [
            Object {
              "_id": 784,
              "doctype": "io.cozy.triggers",
            },
          ],
        },
      }
    }
    onAccountDeleted={[MockFunction]}
    refetchTrigger={[Function]}
    trigger={
      Object {
        "_id": "abc",
      }
    }
  />
</ModalContent>
`;
